fixed spacing

--- a/solutions.css
+++ b/solutions.css
@@ -295,7 +295,7 @@ li a:hover {
   padding: 30px 20px;
   text-align: center;
   font-family: "Montserrat";
-  margin-top: 5rem;
+  margin-top: 3rem;
 }
 
 .footer .footer-content {
